# MyMinimax

./: .gitignore  .metadata  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/jni/: CMakeLists.txt  ocr_jni.cpp  omp_stub.cpp  ppocrv5.cpp  ppocrv5.h
ios/Runner/: AgentTaskRunner.swift  AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/agent/: background_agent_main.dart
lib/app/: app.dart  quantum_splash.dart  theme.dart
lib/core/: providers.dart
lib/shared/: providers.dart
lib/utils/: arrow_polyline.dart  map_marker_generator.dart  ocr_post_processor.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
scripts/: convert_ux_data.py  extract_galaxy.py  extract_ux_json.py  extract_ux_v2.py  gen_galaxy_dart.py  json_to_dart.py  json_to_dart_v2.py  json_to_dart_v3.py
test/: behavior_section_test.dart  browser_integration_test.dart  cdp_full_test.dart  cdp_tool_backend_test.dart  content_extraction_test.dart  full_scene_extraction_test.dart  instructor_test.dart  json_repair_test.dart  live_test.dart  map_integration_test.dart  memory_e2e_flow_test.dart  memory_e2e_test.dart  memory_pipeline_test.dart  real_effect_demo.dart  real_url_test.dart  real_world_test.dart  tool_execution_handler_test.dart  trends_test.dart  widget_test.dart
test/helpers/: mocks.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+311 files in other folders)
